# actix_client_inside_server_example

./: Cargo.toml
src/: main.rs
